Project Management API updated
